# openptv-python

./: .gitignore  README.md  configure.ac
docs/: #py-ptv.lyx#  Makefile  Python_bindings.docx  documentation.doc  install_pyptv_ubuntu.md  make.bat  py-ptv.lyx  pyptv_subversion.txt  refactor_plan.txt
docs/source/: conf.py  index.rst
pyptv_gui/: __init__.py  build_mac.py  calibration_gui copy 2.py  calibration_gui.py  code_editor.py  demo.py  directory_editor.py  ext_sequence_denis.py  ext_tracker_denis.py  general.py  parameter_gui.py  parameters.py  pyptv_batch.py  pyptv_gui.py  quiverplot.py  setup.py  setup_mac.py  text_box_overlay.py
pyptv_gui/parameters/: cal_ori.par  criteria.par  detect_plate.par  man_ori.par  orient.par  ptv.par  sequence.par  shaking.par  targ_rec.par  track.par
pyptv_gui/test/: parameters_test.py  test_orientation.py  test_processing.py  test_tracking.py
pyptv_gui/test/testing_fodder/after_backtracking/: added.528  ptv_is.528
pyptv_gui/test/testing_fodder/backward_res/: added.499  added.500  added.504  added.505  added.507  added.509  added.510  added.518  added.519  added.520  added.522  added.523  added.524  added.525  added.526  added.527  added.530  added.535  added.536  added.538  added.540  added.542  added.545  added.546  added.547  added.549  added.551  added.554  added.557  added.558  added.559  added.562  added.563  added.564  added.565  added.568  added.569  added.570  added.571  added.572  (+107 more)
pyptv_gui/test/testing_fodder/cal/: cal.rar  cal1.rar
pyptv_gui/test/testing_fodder/parameters/: sequence.par  track.par
pyptv_gui/test/testing_fodder/sample_res/: added.497  added.498  added.501  added.502  added.503  added.506  added.508  added.511  added.512  added.513  added.514  added.515  added.516  added.517  added.521  added.528  added.529  added.531  added.532  added.533  added.534  added.537  added.539  added.541  added.543  added.544  added.548  added.550  added.552  added.553  added.555  added.556  added.560  added.561  added.566  added.567  added.569  added.570  added.571  added.572  (+112 more)
pyptv_gui/test/testing_fodder/scene83_event1/: .directory  cam1_Scene83_0497_targets  cam1_Scene83_0498_targets  cam1_Scene83_0499_targets  cam1_Scene83_0500_targets  cam1_Scene83_0503_targets  cam1_Scene83_0563_targets  cam1_Scene83_501_targets  cam1_Scene83_502_targets  cam1_Scene83_504_targets  cam1_Scene83_505_targets  cam1_Scene83_506_targets  cam1_Scene83_572_targets  cam1_Scene83_579_targets  cam1_Scene83_592_targets  cam1_Scene83_594_targets  cam2_Scene83_0498_targets  cam2_Scene83_0499_targets  cam2_Scene83_0500_targets  cam2_Scene83_0503_targets  cam2_Scene83_0504_targets  cam2_Scene83_0505_targets  cam2_Scene83_497_targets  cam2_Scene83_501_targets  cam2_Scene83_502_targets  cam2_Scene83_507_targets  cam2_Scene83_570_targets  cam2_Scene83_572_targets  cam2_Scene83_574_targets  cam2_Scene83_575_targets  cam2_Scene83_576_targets  cam2_Scene83_592_targets  cam3_Scene83_0498_targets  cam3_Scene83_0499_targets  cam3_Scene83_0500_targets  cam3_Scene83_0501_targets  cam3_Scene83_0502_targets  cam3_Scene83_0503_targets  cam3_Scene83_0507_targets  cam3_Scene83_0514_targets  (+23 more)
qml_ui/: CamImage.qml  MiniButton.qml  MovieBrowser.qml  MovieControl.qml  Multicam.qml  movie_browser.py  multicam.qml
src_c/: Makefile.am  calibration.c  calibration.h  corresp.c  correspondences.c  draw.c  epi.c  epi.h  globals.h  image_processing.c  image_processing.h  imgcoord.c  jw_ptv.c  mac_pre_build.py  mouse_actions.c  mousefunction.c  multimed.c  orientation.c  orientation.h  parameters.c  parameters.h  peakfitting.c  pointpos.c  ptv.c  ptv.h  ptv1.c  ptv1.pyx  ray_tracing.c  segmentation.c  setup.py  sortgrid.c  tools.c  tools.h  track.c  tracking_frame_buf.c  tracking_frame_buf.h  tracking_framebuf.pxd  tracking_framebuf.pyx  tracking_run.c  tracking_run.h  (+7 more)
tests_c/: Makefile.am  check_corresp.c  check_epi.c  check_fb.c  check_parameters.c  check_ptv.c  check_vutils.c
